my site should probably have my name on it

--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,9 @@
         not a game, just chill for a while. music from <a href="http://beerontherug.bandcamp.com/album/floral-shoppe">this rad album</a>
       </li>
     </ul>
+
+    <p>
+      &copy; <del>1998</del> 2015 <a href="http://thomasboyt.com">Thomas Boyt</a>
+    </p>
   </body>
 </html>
