add blorp, mode7, devlog

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>DISCOZONE</title>
 
     <script src="script.js"></script>
@@ -20,22 +21,47 @@
 
     <ul>
       <li>
+        (<strong>WIP</strong>) <a href="http://disco.zone/blorp">Blorp</a> -
+        An arena platformer.
+        (<a href="http://github.com/thomasboyt/blorp">src</a>)
+      </li>
+      <li>
         &#x266B; <a href="http://discozone.itch.io/monotron">MONOTRON</a> -
         it's like if circa-1979 Atari had invented Robotron.
+        (<a href="http://github.com/thomasboyt/monotron">src</a>)
       </li>
       <li>
         &#x266B; <a href="http://disco.zone/33rpm">33rpm</a> -
         a game about disco house and shooting dots.
+        (<a href="http://github.com/thomasboyt/33rpm">src</a>)
       </li>
       <li>
         <a href="http://disco.zone/momentum">Momentum</a> -
         a game of risk, reward, and terrible mistakes.
+        (<a href="http://github.com/thomasboyt/lander">src</a>)
+      </li>
+    </ul>
+
+    <p>
+      here are some other experiments
+    </p>
+
+    <ul>
+      <li>
+        <a href="http://disco.zone/mode7">Mode 7</a> -
+        emulating Mario Kart-style pseudo-3d graphics in canvas
+        (<a href="http://github.com/thomasboyt/mode7">src</a>)
       </li>
       <li>
         &#x266B; <a href="http://disco.zone/floral-shoppe/">Floral Shoppe</a> -
-        not a game, just chill for a while. music from <a href="http://beerontherug.bandcamp.com/album/floral-shoppe">this rad album</a>
+        a visualizer for the song <a href="http://beerontherug.bandcamp.com/track/420">リサフランク420 / 現代のコンピュー</a> by <a href="http://beerontherug.bandcamp.com/album/floral-shoppe">Macintosh Plus</a>
+        (<a href="http://github.com/thomasboyt/floral-shoppe">src</a>)
       </li>
     </ul>
+
+    <p>
+      <a href="http://devlog.disco.zone">here is a devlog</a> with more info about my games
+    </p>
 
     <p>
       &copy; <del>1998</del> 2015 <a href="http://thomasboyt.com">Thomas Boyt</a>
