--- a/public/index.html
+++ b/public/index.html
@@ -13,64 +13,66 @@
 
   <body>
 
-    <div class="row">
-      <div class="title">
-        <h1>
-          <span class="rainbow">
-            Disco<br />
-            Zone
-          </span>
-        </h1>
-      </div>
+    <div class="container">
+      <div class="row">
+        <div class="title">
+          <h1>
+            <span class="rainbow">
+              Disco<br />
+              Zone
+            </span>
+          </h1>
+        </div>
 
-      <div class="words">
-        <h2>games</h2>
+        <div class="words">
+          <h2>games</h2>
 
-        <ul>
-          <li>
-            (<strong>WIP</strong>) <a href="http://disco.zone/blorp">Blorp</a> -
-            a platformer of some sort
-            (<a href="http://github.com/thomasboyt/blorp">src</a>)
-          </li>
-          <li>
-            &#x266B; <a href="http://discozone.itch.io/monotron">MONOTRON</a> -
-            it's like if circa-1979 Atari had invented Robotron
-            (<a href="http://github.com/thomasboyt/monotron">src</a>)
-          </li>
-          <li>
-            &#x266B; <a href="http://disco.zone/33rpm">33rpm</a> -
-            a game about disco house and shooting dots
-            (<a href="http://github.com/thomasboyt/33rpm">src</a>)
-          </li>
-          <li>
-            <a href="http://disco.zone/momentum">Momentum</a> -
-            a game of terrible mistakes
-            (<a href="http://github.com/thomasboyt/lander">src</a>)
-          </li>
-        </ul>
+          <ul>
+            <li>
+              (<strong>WIP</strong>) <a href="http://disco.zone/blorp">Blorp</a> -
+              a platformer of some sort
+              (<a href="http://github.com/thomasboyt/blorp">src</a>)
+            </li>
+            <li>
+              &#x266B; <a href="http://discozone.itch.io/monotron">MONOTRON</a> -
+              it's like if circa-1979 Atari had invented Robotron
+              (<a href="http://github.com/thomasboyt/monotron">src</a>)
+            </li>
+            <li>
+              &#x266B; <a href="http://disco.zone/33rpm">33rpm</a> -
+              a game about disco house and shooting dots
+              (<a href="http://github.com/thomasboyt/33rpm">src</a>)
+            </li>
+            <li>
+              <a href="http://disco.zone/momentum">Momentum</a> -
+              a game of terrible mistakes
+              (<a href="http://github.com/thomasboyt/lander">src</a>)
+            </li>
+          </ul>
 
-        <h2>experiments</h2>
+          <h2>experiments</h2>
 
-        <ul>
-          <li>
-            <a href="http://disco.zone/mode7">Mode 7</a> -
-            emulating Mario Kart-style pseudo-3d graphics in canvas
-            (<a href="http://github.com/thomasboyt/mode7">src</a>)
-          </li>
-          <li>
-            &#x266B; <a href="http://disco.zone/floral-shoppe/">Floral Shoppe</a> -
-            a visualizer for the song <a href="http://beerontherug.bandcamp.com/track/420">リサフランク420 / 現代のコンピュー</a> by <a href="http://beerontherug.bandcamp.com/album/floral-shoppe">Macintosh Plus</a>
-            (<a href="http://github.com/thomasboyt/floral-shoppe">src</a>)
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <a href="http://disco.zone/mode7">Mode 7</a> -
+              emulating Mario Kart-style pseudo-3d graphics in canvas
+              (<a href="http://github.com/thomasboyt/mode7">src</a>)
+            </li>
+            <li>
+              &#x266B; <a href="http://disco.zone/floral-shoppe/">Floral Shoppe</a> -
+              a visualizer for the song <a href="http://beerontherug.bandcamp.com/track/420">リサフランク420 / 現代のコンピュー</a> by <a href="http://beerontherug.bandcamp.com/album/floral-shoppe">Macintosh Plus</a>
+              (<a href="http://github.com/thomasboyt/floral-shoppe">src</a>)
+            </li>
+          </ul>
 
-        <h2><a href="http://devlog.disco.zone">devlog</a> <small>(words about games)</small></h2>
+          <h2><a href="http://devlog.disco.zone">devlog</a> <small>(words about games)</small></h2>
 
-        <footer>
-          <p>
-            &copy; 2015 <a href="http://thomasboyt.com">Thomas Boyt</a>
-          </p>
-        </footer>
+          <footer>
+            <p>
+              &copy; 2015 <a href="http://thomasboyt.com">Thomas Boyt</a>
+            </p>
+          </footer>
+        </div>
       </div>
     </div>
 
