Add loudplaces link

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
           </ul>
 
           <h2><a href="http://devlog.disco.zone">devlog</a> <small>(words about games)</small></h2>
+          <h2><a href="http://loudplaces.disco.zone">loud places</a> <small>(words about gigs)</small></h2>
 
           <footer>
             <p>
