--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
 
           <ul>
             <li>
+              (<strong>WIP</strong>) <a href="http://manygolf.disco.zone">manygolf</a> -
+              massively multiplayer golfing
+              (<a href="http://github.com/thomasboyt/manygolf">src</a>)
+            </li>
+            <li>
               (<strong>WIP</strong>) <a href="http://disco.zone/blorp">Blorp</a> -
               a platformer of some sort
               (<a href="http://github.com/thomasboyt/blorp">src</a>)
@@ -70,7 +75,7 @@
 
           <footer>
             <p>
-              &copy; 2015 <a href="http://thomasboyt.com">Thomas Boyt</a>
+              &copy; 2016 <a href="http://thomasboyt.com">Thomas Boyt</a>
             </p>
           </footer>
         </div>
