--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>DISCOZONE</title>
 
     <script src="script.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Lobster|Open%20Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lobster|Open%20Sans' rel='stylesheet' type='text/css'>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -25,28 +25,28 @@
         </div>
 
         <div class="words">
-          <h2>games</h2>
+          <h2>
+            current projects
+          </h2>
 
           <ul>
             <li>
-              (<strong>WIP</strong>) <a href="http://manygolf.disco.zone">manygolf</a> -
+              <a href="http://sledgehammer.surge.sh/">sledgehammer</a> - a clone of <a href="http://www.dessgeega.com/crossroads.html">crossroads</a> with peer-to-peer multiplayer, built in <a href="https://github.com/thomasboyt/pearl">pearl</a> (<a href="https://github.com/thomasboyt/sledgehammer">src</a>)
+            </li>
+          </ul>
+
+          <h2>done-ish games</h2>
+
+          <ul>
+            <li>
+              <a href="https://manygolf.club">manygolf</a> -
               massively multiplayer golfing
               (<a href="http://github.com/thomasboyt/manygolf">src</a>)
-            </li>
-            <li>
-              (<strong>WIP</strong>) <a href="http://disco.zone/blorp">Blorp</a> -
-              a platformer of some sort
-              (<a href="http://github.com/thomasboyt/blorp">src</a>)
             </li>
             <li>
               &#x266B; <a href="http://discozone.itch.io/monotron">MONOTRON</a> -
               it's like if circa-1979 Atari had invented Robotron
               (<a href="http://github.com/thomasboyt/monotron">src</a>)
-            </li>
-            <li>
-              &#x266B; <a href="http://disco.zone/33rpm">33rpm</a> -
-              a game about disco house and shooting dots
-              (<a href="http://github.com/thomasboyt/33rpm">src</a>)
             </li>
             <li>
               <a href="http://disco.zone/momentum">Momentum</a> -
@@ -59,6 +59,19 @@
 
           <ul>
             <li>
+              <a href="https://github.com/thomasboyt/pearl">pearl</a> - a game framework
+            </li>
+            <li>
+              <a href="http://disco.zone/blorp">Blorp</a> -
+              a platformer of some sort
+              (<a href="http://github.com/thomasboyt/blorp">src</a>)
+            </li>
+            <li>
+              &#x266B; <a href="http://disco.zone/33rpm">33rpm</a> -
+              a game about disco house and shooting dots
+              (<a href="http://github.com/thomasboyt/33rpm">src</a>)
+            </li>
+            <li>
               <a href="http://disco.zone/mode7">Mode 7</a> -
               emulating Mario Kart-style pseudo-3d graphics in canvas
               (<a href="http://github.com/thomasboyt/mode7">src</a>)
@@ -70,12 +83,12 @@
             </li>
           </ul>
 
-          <h2><a href="http://devlog.disco.zone">devlog</a> <small>(words about games)</small></h2>
-          <h2><a href="http://loudplaces.disco.zone">loud places</a> <small>(words about gigs)</small></h2>
+          <h2><a href="http://loudplaces.disco.zone">loud places</a> <small>(words about places I've been)</small></h2>
+          <h2><a href="http://devlog.disco.zone">devlog</a> <small>(words about code)</small></h2>
 
           <footer>
             <p>
-              &copy; 2016 <a href="http://thomasboyt.com">Thomas Boyt</a>
+              &copy; 2018 <a href="http://thomasboyt.com">Thomas Boyt</a>
             </p>
           </footer>
         </div>
